# ConsoleCalculatorMathLib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: calculator-math.h
tests/: calculator-math-test.cpp
